--- a/clash_config.ini
+++ b/clash_config.ini
@@ -60,7 +60,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🤖 AI`select`[]♻️ 自动选择`[]🐸 手动切换`[]🎯 全球直连`[]🇭🇰 香港手动`[]🇯🇵 日本手动`[]🇸🇬 加坡手动`[]🇺🇲 美国手动`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 加坡自动`[]♻️ 美国自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 香港均衡`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡
 custom_proxy_group=🎶 Spotify`select`[]♻️ 自动选择`[]🐸 手动切换`[]🎯 全球直连`[]🇭🇰 香港手动`[]🇯🇵 日本手动`[]🇸🇬 加坡手动`[]🇺🇲 美国手动`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 加坡自动`[]♻️ 美国自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 香港均衡`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡
 custom_proxy_group=🎶 Tiktok`select`[]♻️ 自动选择`[]🐸 手动切换`[]🎯 全球直连`[]🇭🇰 香港手动`[]🇯🇵 日本手动`[]🇸🇬 加坡手动`[]🇺🇲 美国手动`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 加坡自动`[]♻️ 美国自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 香港均衡`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连
 
 custom_proxy_group=🇭🇰 香港手动`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
 custom_proxy_group=🇯🇵 日本手动`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
