--- a/black_config.ini
+++ b/black_config.ini
@@ -81,25 +81,25 @@ custom_proxy_group=🎶 Spotify`select`[]♻️ 自动选择`[]🐸 手动切换
 custom_proxy_group=🎶 Tiktok`select`[]♻️ 自动选择`[]🐸 手动切换`[]🎯 全球直连`[]🇭🇰 香港手动`[]🇯🇵 日本手动`[]🇸🇬 加坡手动`[]🇺🇲 美国手动`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 加坡自动`[]♻️ 美国自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 香港均衡`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡
 custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择
 
-custom_proxy_group=🇭🇰 香港手动`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇯🇵 日本手动`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇸🇬 加坡手动`select`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇺🇲 美国手动`select`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$
+custom_proxy_group=🇭🇰 香港手动`select`(香港|HK|Hong Kong|🇭🇰|HongKong))
+custom_proxy_group=🇯🇵 日本手动`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
+custom_proxy_group=🇸🇬 加坡手动`select`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=🇺🇲 美国手动`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 
-custom_proxy_group=♻️ 香港自动`url-test`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`300,,20
-custom_proxy_group=♻️ 日本自动`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`300,,20
-custom_proxy_group=♻️ 加坡自动`url-test`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`300,,20
-custom_proxy_group=♻️ 美国自动`url-test`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`300,,20
+custom_proxy_group=♻️ 香港自动`url-test`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://1.1.1.1`300,,20
+custom_proxy_group=♻️ 日本自动`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://1.1.1.1`300,,20
+custom_proxy_group=♻️ 加坡自动`url-test`(新加坡|坡|狮城|SG|Singapore)`http://1.1.1.1`300,,20
+custom_proxy_group=♻️ 美国自动`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://1.1.1.1`300,,20
 
-custom_proxy_group=🔯 香港故转`fallback`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`60,,50
-custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`60,,50
-custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`60,,50
-custom_proxy_group=🔯 美国故转`fallback`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`60,,50
+custom_proxy_group=🔯 香港故转`fallback`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://1.1.1.1`60,,50
+custom_proxy_group=🔯 日本故转`fallback`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://1.1.1.1`60,,50
+custom_proxy_group=🔯 加坡故转`fallback`(新加坡|坡|狮城|SG|Singapore)`http://1.1.1.1`60,,50
+custom_proxy_group=🔯 美国故转`fallback`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://1.1.1.1`60,,50
 
-custom_proxy_group=🍃 香港均衡`load-balance`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`60,,10
-custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`60,,10
-custom_proxy_group=🍃 加坡均衡`load-balance`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`60,,10
-custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://1.1.1.1`60,,10
+custom_proxy_group=🍃 香港均衡`load-balance`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://1.1.1.1`60,,10
+custom_proxy_group=🍃 日本均衡`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://1.1.1.1`60,,10
+custom_proxy_group=🍃 加坡均衡`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://1.1.1.1`60,,10
+custom_proxy_group=🍃 美国均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://1.1.1.1`60,,10
 
 ;启用自定义规则集
 
