--- a/white_config.ini
+++ b/white_config.ini
@@ -6,6 +6,8 @@
 ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ;不应该被去广告分流规则屏蔽的域名、IP
 ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.yaml
+;Acl-CnDns
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/ChinaDNS.yaml
 
 ;游戏下载直连
 ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/GameDownloadCN/GameDownloadCN.yaml
@@ -30,6 +32,10 @@ ruleset=🤖 AI,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_
 ruleset=🤖 AI,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BardAI/BardAI.yaml
 ;OpenAI
 ruleset=🤖 AI,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.yaml
+;Acl-Claude
+ruleset=🤖 AI,clash-classic:https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/ClaudeAI.yaml
+;Acl-OpenAI
+ruleset=🤖 AI,clash-classic:https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/OpenAi.yaml
 
 ;Spotify
 ruleset=🎶 Spotify,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Spotify/Spotify.yaml
@@ -39,6 +45,10 @@ ruleset=🎶 Tiktok,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_r
 
 ;个人
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/Tjl2357954871/clash_rule_privacy@main/sub.list
+;Acl-PornAsia
+ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/PornAsia.yaml
+;Acl-Porn
+ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/Porn.yaml
 ;测速
 ruleset=🚀 节点选择,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Speedtest/Speedtest.yaml
 ;Github
