--- a/white_config.ini
+++ b/white_config.ini
@@ -13,6 +13,8 @@ ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/ACL4SS
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/Tjl2357954871/clash_rule_privacy@main/direct.list
 ;游戏下载直连
 ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/GameDownloadCN/GameDownloadCN.yaml
+;百度
+ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Baidu/Baidu.yaml
 ;Steam直连
 ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/SteamCN/SteamCN.yaml
 ;抖音
