--- a/shadowrocket-nodnsleak.ini
+++ b/shadowrocket-nodnsleak.ini
@@ -16,6 +16,7 @@ dns-direct-fallback-proxy = true
 RULE-SET,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Bing.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/Tjl2357954871/clash_rule_privacy/refs/heads/main/tgban.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list,DIRECT
